[package]
name = "grow"
version = "0.1.0"
edition = "2021"

# TODO: See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.25"
simplelog = "^0.12.1"
log = "^0.4.17"
etcetera = "^0.4.0"
pulldown-cmark = { version = "^0.9.2", default-features = false}