[package]
name = "grow"
version = "0.1.0"
authors = ["Gabriel Hansson <gabrielhansson00@gmail.com>"]
description = "Live markdown viewer with GFM support."
edition = "2021"

# TODO: See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using fork for https://github.com/tui-rs-revival/ratatui/pull/121
ratatui = { git = "https://github.com/gibbz00/ratatui.git", branch = "split_viewport"}
crossterm = "^0.25"
pulldown-cmark = { version = "^0.9.2", default-features = false}
notify = "^5.1.0"
anyhow = "^1.0.70"
clap = { version = "^4.1.11", features = ["derive"]}
unicode-segmentation = "^1.7.1"
strum = { version = "0.24.1", features = ["derive"]}
